adds cursor pointer to submit button

--- a/reviews/templates/course_review.html
+++ b/reviews/templates/course_review.html
@@ -83,7 +83,7 @@
                 <div class="flex flex-row items-center justify-between ">
                     <input type="submit"
                            value="Calificar"
-                           class="w-96 h-10 rounded-xl bg-indigo-600 text-white font-bold"/>
+                           class="w-96 h-10 rounded-xl bg-indigo-600 text-white font-bold hover:cursor-pointer"/>
                 </div>
                 <!-- Error Message -->
                 {% if error %}
