--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -161,7 +161,7 @@
             {% for comment in comments %}
                 <div class="flex flex-col my-6 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl w-full md:w-1/3">
                     <div class="flex justify-between">
-                        <p class="text-md font-bold text-gray-800">{{ comment.course }}</p>
+                        <a href="{% url 'courses:specific_course' comment.course.pk %}"><<p class="text-md font-bold text-gray-800">{{ comment.course }}</p></a>
                         <div class="flex flex-col-reverse space-x-1 md:flex-row">
                             {% if comment.user == user %}
                                 <button class="flex flex-row items-center justify-center ml-1 px-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500 text-lg font-bold text-white"
