--- a/home/templates/profile.html
+++ b/home/templates/profile.html
@@ -7,8 +7,8 @@
 <div class="flex flex-col justify-center items-center mt-12">
     <h1 class="text-4xl font-bold text-gray-800">Perfil</h1>
     <div class="flex flex-row">
-        <p class="text-lg text-gray-800">Cantidad de likes: {{ total_upvotes }}</p>
-        <p class="text-lg text-gray-800 ml-4">Cantidad de dislikes: {{ total_downvotes }}</p>
+        <p class="text-lg text-gray-800">Likes recibidos: {{ total_upvotes }}</p>
+        <p class="text-lg text-gray-800 ml-4">Dislikes recibidos: {{ total_downvotes }}</p>
     </div>
 </div>
 <div class="flex flex-col justify-center items-center mt-12">
