--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,15 @@
         {% block head %}
         {% endblock head %}
         <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-49VH3D2PXT"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-49VH3D2PXT');
+        </script>
     </head>
     <body class="flex flex-col min-h-screen">
         {% include "navbar.html" %}
