--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -92,7 +92,7 @@
                         <label for="codification" class="text-xl font-bold text-gray-600">Codificación</label>
                         <input type="codification"
                                name="codification"
-                               placeholder="Ej: LITE3033"
+                               placeholder="Ej: LITE3033 (Puede estar vacío))"
                                id="course-code"
                                class="w-96 h-10 rounded-xl border-2 border-gray-300 focus:border-indigo-600 focus:outline-none px-4"/>
                     </div>
