optimizations for Performance and SEO

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-ES">
     <head>
         {% load static %}
         {% load static tailwind_tags %}
@@ -9,7 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="title" content="ProfeRank"/>
-        <meta name="description" content="El mejor lugar para eligir tus cursos con los mejores profesores!"/>
+        <meta name="description" content="El mejor lugar para eligir tus cursos con los mejores profesores en Puerto Rico!"/>
         <meta name="keywords" content="UPR, Inter, UAGM"/>
         <meta name="robots" content="index, follow"/>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
