--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <!-- image for mobile devices -->
                 <div class="block w-full mt-8 md:hidden">
-                    <img src="https://images.unsplash.com/photo-1535982330050-f1c2fb79ff78?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
+                    <img src="{% static 'img/hero.jpeg' %}"
                          alt="hero"
                          class="object-cover object-center w-full h-64 rounded-lg shadow-lg lg:h-96"/>
                 </div>
@@ -38,7 +38,7 @@
             </div>
             <!-- hero image -->
             <div class="hidden w-full mt-8 md:w-1/2 lg:mt-0 md:block">
-                <img src="https://images.unsplash.com/photo-1535982330050-f1c2fb79ff78?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
+                <img src="{% static 'img/hero.jpeg' %}"
                      alt="hero"
                      class="object-cover object-center w-full h-64 rounded-lg shadow-lg lg:h-96"/>
             </div>
@@ -56,7 +56,7 @@
             </div>
             <div class="flex flex-col mt-8 items-center justify-center md:space-x-6 md:flex-row">
                 <div class="flex flex-col-reverse items-center justify-center md:w-1/3">
-                    <img src="{% static 'img/registrate.png' %}"
+                    <img src="{% static 'img/registrate.avif' %}"
                             alt="teacher"
                             class="rounded-lg"/>
                     <div class="flex flex-col items-center justify-center">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col-reverse items-center justify-center md:w-1/3">
-                    <img src="{% static 'img/profesores.png' %}"
+                    <img src="{% static 'img/profesores.avif' %}"
                             alt="teacher"
                             class="rounded-lg"/>
                     <div class="flex flex-col items-center justify-center">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col-reverse items-center justify-center md:w-1/3">
-                    <img src="{% static 'img/confesiones.png' %}"
+                    <img src="{% static 'img/confesiones.avif' %}"
                             alt="teacher"
                             class="rounded-lg"/>
                     <div class="flex flex-col items-center justify-center">
