changed pro_student to recommended

--- a/reviews/templates/course_review.html
+++ b/reviews/templates/course_review.html
@@ -72,11 +72,11 @@
                                class="rounded-md"/>
                     </div>
                     <div class="flex flex-row items-center justify-center space-x-1">
-                        <label for="pro_student" class="text-xl font-bold text-gray-600">Pro estudiante</label>
+                        <label for="recommended" class="text-xl font-bold text-gray-600">Recomendado</label>
                         <input type="checkbox"
-                               id="pro_student"
-                               name="pro_student"
-                               value="pro_student"
+                               id="recommended"
+                               name="recommended"
+                               value="recommended"
                                class="rounded-md"/>
                     </div>
                 </div>
