--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -15,39 +15,39 @@
         <!-- Average Statistics -->
         <div class="flex flex-col items-center justify-between w-9/12 md:w-1/2 p-4 mt-8 rounded-xl border border-gray-200 shadow-md">
             <div>
-                <h2 class="text-2xl font-bold text-gray-800 md:text-3xl">Estadísticas</h2>
+                <h2 class="text-2xl font-bold text-gray-800 md:text-2xl">Estadísticas</h2>
                 <hr class=" border-gray-300"/>
             </div>
             {% if professor.review_count > 0 %}
-            <div class="flex flex-col mt-4 justify-start items-start space-y-2 md:space-y-0 md:justify-between md:items-center md:flex-row md:w-3/4">
+            <div class="flex flex-col mt-4 justify-start items-start space-y-2 md:space-y-0 md:space-x-2 md:justify-between md:items-center md:flex-row md:w-3/4">
                 <div class="flex flex-row items-center justify-center md:flex-col">
-                    <h2 class="hidden text-2xl font-bold text-gray-800 md:block">Dificultad</h2>
-                    <h2 class="hidden text-2xl font-bold text-gray-800 md:block">{{ professor.difficulty }}</h2>
+                    <h2 class="hidden text-xl font-bold text-gray-800 md:block">Dificultad</h2>
+                    <h2 class="hidden text-xl font-bold text-gray-800 md:block">{{ professor.difficulty }}</h2>
                     <h2 class="text-lg font-bold text-gray-800 md:hidden">Dificultad: {{ professor.difficulty }}</h2>
                 </div>
                 <!-- difficulty -->
                 <div class="flex flex-row items-center justify-center md:flex-col">
-                    <h2 class="hidden md:block text-2xl font-bold text-gray-800">Nota</h2>
-                    <h2 class="hidden md:block text-2xl font-bold text-gray-800">{{ professor.grade }}</h2>
+                    <h2 class="hidden md:block text-xl font-bold text-gray-800">Nota</h2>
+                    <h2 class="hidden md:block text-xl font-bold text-gray-800">{{ professor.grade }}</h2>
                     <h2 class="text-lg font-bold text-gray-800 md:hidden">Nota: {{ professor.grade }}</h2>
                 </div>
                 <!-- workload -->
                 <div class="flex flex-row items-center justify-center md:flex-col">
-                    <h2 class="hidden md:block text-2xl font-bold text-gray-800"">Organizado
+                    <h2 class="hidden md:block text-xl font-bold text-gray-800"">Organizado
                     </h2>
-                    <h2 class="hidden md:block text-2xl font-bold text-gray-800"">
+                    <h2 class="hidden md:block text-xl font-bold text-gray-800"">
                     {{ professor.organized }}</h2>
                     <h2 class="text-lg font-bold text-gray-800 md:hidden">Organizado: {{ professor.organized }}</h2>
                 </div>
                 <!-- pro student -->
                 <div class="flex flex-row items-center justify-center  md:flex-col">
-                    <h2 class="hidden md:block text-2xl font-bold text-gray-800"">
-                        Pro estudiante
+                    <h2 class="hidden md:block text-xl font-bold text-gray-800"">
+                        Recomendado
                     </h2>
-                    <h2 class="hidden md:block text-2xl font-bold text-gray-800"">
-                        {{ professor.pro_student }}
+                    <h2 class="hidden md:block text-xl font-bold text-gray-800"">
+                        {{ professor.recommended }}
                     </h2>
-                    <h2 class="text-lg font-bold text-gray-800 md:hidden">Pro estudiante: {{ professor.pro_student }}</h2>
+                    <h2 class="text-lg font-bold text-gray-800 md:hidden">Recomendado: {{ professor.recommended }}</h2>
                 </div>
             </div>
             {% else %}
@@ -62,7 +62,7 @@
     <section class="flex flex-col justify-center items-center mt-12">
         <!-- header -->
         <div class="flex flex-row">
-            <h1 class="text-3xl font-bold text-gray-800">Cursos</h1>
+            <h2 class="text-3xl font-bold text-gray-800">Cursos</h2>
             {% if user.is_authenticated %}
                 <button class="flex flex-row items-center justify-center ml-1 px-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500 text-lg font-bold text-white"
                         id="toggle-course-form">
@@ -106,9 +106,9 @@
             </div>
         {% endif %}
         <!-- courses -->
-        <div class="flex flex-row justify-center items-center w-3/4 flex-wrap">
+        <div class="flex flex-col justify-center items-center w-3/4 flex-wrap">
             {% for course in courses %}
-                <div class="flex toggle course flex-col rounded-lg p-6 m-4 shadow-md border border-gray-200  md:w-6/12 md:hover:animate-pulse"
+                <div class="flex toggle course flex-col rounded-lg p-6 m-4 shadow-md border border-gray-200 w-8/12 md:hover:animate-pulse"
                      data-college="{{ course.college }}"
                      data-department="{{ course.department }}"
                      data-name="{{ course.name }}">
@@ -145,9 +145,9 @@
     <!-- Comments section -->
     <section class="flex flex-col justify-center items-center mt-12">
         <div class="flex flex-row">
-            <h1 class="text-3xl font-bold text-gray-800">
+            <h2 class="text-3xl font-bold text-gray-800">
                 Comentarios
-            </h1>
+            </h2>
             <p class="text-lg font-bold text-gray-800 ml-1">
                 ({{ comments|length }})
             </p>
