--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="title" content="ProfeRank"/>
-        <meta name="description" content="El mejor lugar para eligir tus cursos con los mejores profesores en Puerto Rico!"/>
+        <meta name="description" content="¡El lugar ideal para elegir tus cursos con los mejores profesores y descubrir los secretos más interesantes de tu universidad!"/>
         <meta name="keywords" content="UPR, Inter, UAGM"/>
         <meta name="robots" content="index, follow"/>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
