--- a/confessions/templates/confession_feed.html
+++ b/confessions/templates/confession_feed.html
@@ -77,30 +77,16 @@
     {% endfor %}
 </section>
 <!-- Paginator -->
-<div class="flex flex-row justify-center">
-    <div class="flex flex-row justify-center space-x-2">
-        {% if confessions.has_previous %}
-            <a href="?page={{ confessions.previous_page_number }}" class="flex flex-row items-center justify-center space-x-1 text-indigo-600 hover:text-indigo-800">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 20 20"
-                        fill="currentColor"
-                        class="w-5 h-5">
-                    <path fill-rule="evenodd" d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z" clip-rule="evenodd" />
-                </svg>
-                <p>Anterior</p>
-            </a>
+<div class="flex flex-row justify-center items-center">
+    {% for page in paginator.adjusted_elided_pages %}
+        {% if page == confessions.number %}
+            <a href="?page={{ page }}" class="bg-indigo-600 text-white px-2 md:py-2 rounded md:px-4 md:rounded-full mx-2">{{ page }}</a>
+        <!-- elif is the ... use a <p> instead -->
+        {% elif page == paginator.ELLIPSIS %}
+            <p class="text-indigo-600 font-bold py-2 px-4 mx-1">{{ page }}</p>
+        {% else %}
+            <a href="?page={{ page }}" class="md:bg-indigo-100 text-indigo-600 px-1 rounded md:py-2 md:px-4 md:rounded-full mx-2">{{ page }}</a>
         {% endif %}
-        {% if confessions.has_next %}
-            <a href="?page={{ confessions.next_page_number }}" class="flex flex-row items-center justify-center space-x-1 text-indigo-600 hover:text-indigo-800">
-                <p>Siguiente</p>
-                <svg xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 20 20"
-                        fill="currentColor"
-                        class="w-5 h-5">
-                    <path fill-rule="evenodd" d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z" clip-rule="evenodd" />
-                </svg>
-            </a>
-        {% endif %}
-    </div>
+    {% endfor %}
 </div>
 {% endblock content %}
