--- a/confessions/templates/controls/confession_controls.html
+++ b/confessions/templates/controls/confession_controls.html
@@ -5,7 +5,7 @@
             <select name="college"
                     id="college_filter"
                     class="border border-gray-300 rounded-md p-2 md:px-8">
-                <option value="">
+                <option value="all">
                     Todas
                 </option>
                 {% for college in universities %}
@@ -22,7 +22,6 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8">
                 <path fill-rule="evenodd" d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zM12.75 9a.75.75 0 00-1.5 0v2.25H9a.75.75 0 000 1.5h2.25V15a.75.75 0 001.5 0v-2.25H15a.75.75 0 000-1.5h-2.25V9z" clip-rule="evenodd" />
                 </svg>
-
             </a>
         </div>
         <!-- Filter Container -->
