--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
 {% load static %}
-{% block title %}<title>Sobre ProfeRank Hub</title>{% endblock title %}
+{% block title %}<title>Sobre ProfeRank</title>{% endblock title %}
 {% endblock head %}
 {% block content %}
 <div class="flex flex-col justify-center items-center mt-12">
