--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -12,7 +12,7 @@
         <p class="text-xl text-gray-600 mt-4">ProfeRank es un proyecto desarollado con el objetivo de mejorar  en el desarrollo web y aprender en el camino. La plataforma busca construir y mejorar sobre las ideas de otras páginas similares, con la innovación de calificar a los profesores en los cursos que imparten en lugar de hacer una calificación general.</p>
         <br/>
         <p class="text-xl text-gray-600">
-            ¿Tienes sugerencias o quieres agregar alguna universidad a la plataforma? Visita el siguiente enlace:  <a href="{% url 'reviews:suggestions' %}?next={{ request.path }}" class="text-indigo-600">Sugerencias</a>
+            ¿Tienes sugerencia o comentario? Visita el siguiente enlace:  <a href="{% url 'reviews:suggestions' %}?next={{ request.path }}" class="text-indigo-600">Sugerencias</a>
         </p>
     </div>
 </div>
