--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -108,7 +108,7 @@
         <!-- courses -->
         <div class="flex flex-col justify-center items-center w-3/4 flex-wrap">
             {% for course in courses %}
-                <div class="flex toggle course flex-col rounded-lg p-6 m-4 shadow-md border border-gray-200 w-8/12 md:hover:animate-pulse"
+                <div class="flex toggle course flex-col rounded-lg p-6 m-4 shadow-md border border-gray-200 w-11/12 md:w-8/12 md:hover:animate-pulse"
                      data-college="{{ course.college }}"
                      data-department="{{ course.department }}"
                      data-name="{{ course.name }}">
