--- a/confessions/templates/confession_feed.html
+++ b/confessions/templates/confession_feed.html
@@ -3,9 +3,6 @@
     {% load static %}
     {% block title %}<title>ProfeRank - Confesiones</title>{% endblock title %}
 {% endblock head %}
-{% block controls %}
-    {% include "controls/confession_controls.html" %}
-{% endblock controls %}
 {% block content %}
     <!-- Confessions Section -->
 <div class="flex flex-row justify-center items-center">
@@ -17,22 +14,50 @@
         </svg>
     </button>
     {% endif %}
+    <div class="flex flex-col md:justify-center md:items-center space-x-4">
+    <label for="college" class="hidden text-gray-700 font-bold md:block">Universidad</label>
+    <select name="college"
+            id="college_filter"
+            class="border border-gray-300 rounded-md" onchange="changeUrl()">
+        <option value="" selected disabled>---</option>    
+        <option value="all">
+            Todas
+        </option>
+        {% for college in universities %}
+        {% if college == selected %}
+            <option value="{{ college }}" selected>
+                {{ college|truncatechars:20 }}
+            </option>
+        {% else %}
+            <option value="{{ college }}">
+                {{ college|truncatechars:20 }}
+            </option>
+        {% endif %}
+        {% endfor %}
+    </select>
 </div>
-<form action="{% url 'confessions:confession_create' %}" method="post" class="hidden" id="confession_form">
-        {% csrf_token %}
-        <div class="flex flex-col justify-center items-center">
-            <div class="flex flex-col justify-center items-center">
-                <label for="title" class="text-xl font-bold text-gray-900">Título</label>
-                <input type="text" name="title" id="title" class="p-2 border-2 border-gray-300 rounded-md focus:outline-none focus:border-indigo-600" required/>
-            </div>
-            <div class="flex flex-col justify-center items-center">
-                <label for="body" class="text-xl font-bold text-gray-900">Confesión</label>
-                <textarea name="body" id="body" cols="30" rows="10" class="p-2 border-2 border-gray-300 rounded-md focus:outline-none focus:border-indigo-600" required></textarea>
-            </div>
-            <div class="flex flex-col justify-center items-center">
-                <button type="submit" class="p-2 my-2 bg-indigo-600 text-white rounded-md">Confesar</button>
-            </div>
-        </div>
+</div>
+<form action="{% url 'confessions:confession_create' %}" method="post" class="hidden flex-col justify-center items-center" id="confession_form">
+{% csrf_token %}
+    <div class="flex flex-col justify-center items-center">
+        <label for="title" class="text-xl font-bold text-gray-900">Título</label>
+        <input type="text" name="title" id="title" class="p-2 border-2 border-gray-300 rounded-md focus:outline-none focus:border-indigo-600" required/>
+    </div>
+    <div class="flex flex-col justify-center items-center">
+        <label for="college" class="text-xl font-bold text-gray-900">Universidad</label>
+        <select name="college" id="college" class="border border-gray-300 rounded-md" required>
+            {% for college in universities %}
+                <option value="{{ college }}">{{ college }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    <div class="flex flex-col justify-center items-center">
+        <label for="body" class="text-xl font-bold text-gray-900">Confesión</label>
+        <textarea name="body" id="body" cols="30" rows="10" class="p-2 border-2 border-gray-300 rounded-md focus:outline-none focus:border-indigo-600" required></textarea>
+    </div>
+    <div class="flex flex-col justify-center items-center">
+        <button type="submit" class="p-2 my-2 bg-indigo-600 text-white rounded-md">Confesar</button>
+    </div>
 </form>
 {% for confesion in confessions %}
     <div class="flex flex-col mx-auto p-4 w-11/12 bg-gray-100 rounded-md my-4 md:w-1/2 md:p-3">
@@ -135,4 +160,17 @@
 <script>var csrftoken = '{{ csrf_token }}';</script>
 <script src="{% static 'js/likedislike-confessions.js' %}"></script>
 <script src="{% static 'js/confessions.js' %}"></script>
+<script>
+    function changeUrl(){
+        console.log("changeUrl");
+        let select = document.getElementById("college_filter");
+        let college = select.options[select.selectedIndex].value;
+        if (college == "all"){
+            window.location.href = "/confessions/";
+        }
+        else{
+            window.location.href = "/confessions/" + college + "/";
+        }
+    }
+</script>
 {% endblock scripts %}
