--- a/confessions/templates/confession_feed.html
+++ b/confessions/templates/confession_feed.html
@@ -143,16 +143,19 @@
 {% endfor %}
 <!-- Paginator -->
 <div class="flex flex-row justify-center items-center">
-    {% for page in paginator.adjusted_elided_pages %}
-        {% if page == confessions.number %}
-            <a href="?page={{ page }}" class="bg-indigo-600 text-white px-2 md:py-2 rounded md:px-4 md:rounded-full mx-2">{{ page }}</a>
-        <!-- elif is the ... use a <p> instead -->
-        {% elif page == paginator.ELLIPSIS %}
-            <p class="text-indigo-600 font-bold py-2 px-4 mx-1">{{ page }}</p>
-        {% else %}
-            <a href="?page={{ page }}" class="md:bg-indigo-100 text-indigo-600 px-1 rounded md:py-2 md:px-4 md:rounded-full mx-2">{{ page }}</a>
-        {% endif %}
-    {% endfor %}
+    <!-- If we have more than one page render the paginator -->
+    {% if paginator.adjusted_elided_pages > 1 %}
+        {% for page in paginator.adjusted_elided_pages %}
+            {% if page == confessions.number %}
+                <a href="?page={{ page }}" class="bg-indigo-600 text-white px-2 md:py-2 rounded md:px-4 md:rounded-full mx-2">{{ page }}</a>
+            <!-- elif is the ... use a <p> instead -->
+            {% elif page == paginator.ELLIPSIS %}
+                <p class="text-indigo-600 font-bold py-2 px-4 mx-1">{{ page }}</p>
+            {% else %}
+                <a href="?page={{ page }}" class="md:bg-indigo-100 text-indigo-600 px-1 rounded md:py-2 md:px-4 md:rounded-full mx-2">{{ page }}</a>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
 </div>
 {% endblock content %}
 {% block scripts %}
