--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,7 +16,7 @@
                 <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
                 <a href="{% url 'professors:all_professors' %}"
                    class="hover:text-indigo-300">Profesores</a>
-                <a href="#" class="text-gray-300 hover:cursor-not-allowed">Confesiones</a>
+                <a href="{% url 'confessions:confession_feed' %}" class="hover:text-indigo-300">Confesiones</a>
             </div>
 
             <!-- user section -->
@@ -41,7 +41,7 @@
                 <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
                 <a href="{% url 'professors:all_professors' %}"
                    class="hover:text-indigo-300">Profesores</a>
-                <a href="#" class="text-gray-300 hover:cursor-not-allowed">Confesiones</a>
+                <a href="{% url 'confessions:confession_feed' %}" class="hover:text-indigo-300">Confesiones</a>
                 <!-- a line delimiting the end of the menu -->
                 <div class="w-full h-0.5 bg-gray-700"></div>
                 <a class="bg-indigo-600 text-white p-2 rounded-xl"
@@ -67,7 +67,7 @@
                 <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
                 <a href="{% url 'professors:all_professors' %}"
                    class="hover:text-indigo-300">Profesores</a>
-                <a href="#" class="text-gray-300 hover:cursor-not-allowed">Confesiones</a>
+                <a href="{% url 'confessions:confession_feed' %}" class="hover:text-indigo-300">Confesiones</a>
             </div>
             <!-- login or signin -->
             <div class="hidden flex-row justify-center items-center space-x-4 text-md md:flex">
@@ -90,7 +90,7 @@
                 <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
                 <a href="{% url 'professors:all_professors' %}"
                    class="hover:text-indigo-300">Profesores</a>
-                <a href="#" class="text-gray-300 hover:cursor-not-allowed">Confesiones</a>
+                <a href="{% url 'confessions:confession_feed' %}" class="hover:text-indigo-300">Confesiones</a>
                 <!-- login buttons -->
                 <div class="flex flex-row justify-center items-center space-x-4 text-xl">
                     <a href="{% url 'accounts:login' %}?next={{ request.path }}"
