--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="container mt-8 py-12 mx-auto md:w-1/3 md:bg-gray-100 rounded-xl">
         <div class="flex flex-col items-center justify-cente p-4">
-            <h1 class="text-3xl font-bold text-gray-600 mt-4">Registrate</h1>
+            <h1 class="text-3xl font-bold text-gray-600 mt-4">Regístrate</h1>
             <div class="flex flex-row justify-center items-center space-x-4 mt-4">
                 <div class="flex flex-col items-center justify-center bg-white rounded-xl shadow-xl p-4">
                     <a href="{% url 'social:begin' 'google-oauth2' %}?next={{ next }}" class="flex flex-row justify-center items-center space-x-2">
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="flex flex-col items-center justify-center  p-4>
-            <h1 class="text-3xl font-bold text-gray-600 mt-4">O registrate con tu email</h1>
+            <h1 class="text-3xl font-bold text-gray-600 mt-4">O regístrate con tu email</h1>
             <form action="{% url 'accounts:register' %}?next={{ next }}"
                   method="post"
                   class="flex flex-col items-center justify-center space-y-4 mt-4">
