--- a/confessions/templates/confession_feed.html
+++ b/confessions/templates/confession_feed.html
@@ -59,6 +59,9 @@
         <button type="submit" class="p-2 my-2 bg-indigo-600 text-white rounded-md">Confesar</button>
     </div>
 </form>
+{% if not user.is_authenticated %}
+<p class="text-gray-600 text-center">Inicia sesión para crear una confesión</p>
+{% endif %}
 {% for confesion in confessions %}
     <div class="flex flex-col mx-auto p-4 w-11/12 bg-gray-100 rounded-md my-4 md:w-1/2 md:p-3">
         <a href="{% url 'confessions:confession_detail' confesion.pk %}">
