--- a/confessions/templates/confession.html
+++ b/confessions/templates/confession.html
@@ -102,6 +102,10 @@
                           rows="10"
                           class="md:w-3/4 p-2 rounded-md shadow-md border border-gray-200"></textarea>
                 <input type="hidden" name="confession" value="{{ confession.pk }}"/>
+                <div class="flex flex-row items-center justify-center my-2">
+                    <input type="checkbox" name="anonymous" id="anonymous" class="mr-2"/>
+                    <label for="anonymous" class="text-gray-600">Anónimo</label>
+                </div>
                 <button type="submit"
                         id="submit-comment"
                         class="flex flex-row items-center justify-center px-2 mt-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500">
@@ -113,7 +117,11 @@
             {% for comment in comments %}
                 <div class="flex flex-col my-6 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl w-full md:w-1/3">
                     <div class="flex justify-between">
-                        <p class="text-md font-bold text-gray-800">{{ comment.user }}</p>
+                        {% if comment.anonymous %}
+                            <p class="text-md font-bold text-gray-800">Anónimo</p>
+                        {% else %}
+                            <p class="text-md font-bold text-gray-800">{{ comment.user }}</p>
+                        {% endif %}
                         <div class="flex flex-col-reverse space-x-1 md:flex-row">
                             {% if comment.user == user %}
                                 <button class="flex flex-row items-center justify-center ml-1 px-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500 text-lg font-bold text-white"
