--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -7,10 +7,10 @@
 <div class="flex flex-col justify-center items-center mt-12">
     <h1 class="text-4xl font-bold text-gray-800">¿ProfeRank?</h1>
     <div class="flex flex-col justify-center items-center w-11/12 md:w-1/3">
-        <p class="text-xl text-gray-600 mt-4">ProfeRank es un proyecto desarollado con el objetivo de mejorar  en el desarrollo web y aprender en el camino. La plataforma busca construir y mejorar sobre las ideas de otras páginas similares, con la innovación de calificar a los profesores en los cursos que imparten en lugar de hacer una calificación general.</p>
+        <p class="text-xl text-gray-600 mt-4">ProfeRank es un proyecto desarollado con el objetivo de mejorar  en el desarrollo web y aprender en el camino. La plataforma busca construir y mejorar sobre las ideas de otras páginas similares, con la innovación de calificar a los profesores en los cursos que imparten en lugar de hacer una calificación general. 
         <br/>
-        <p class="text-xl text-gray-600">
-            ¿Tienes sugerencia o comentario? Visita el siguiente enlace:  <a href="{% url 'reviews:suggestions' %}?next={{ request.path }}" class="text-indigo-600">Sugerencias</a>
+        <br/>
+        ¿Tienes sugerencia o comentario? Visita el siguiente enlace:  <a href="{% url 'reviews:suggestions' %}?next={{ request.path }}" class="text-indigo-600">Sugerencias</a>
         </p>
     </div>
 </div>
