--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -48,14 +48,14 @@
 {% else %}
     <nav>
         <div class="container flex flex-row mx-auto justify-between items-center my-4">
-            <div class="flex flex-row justify-center items-center">
+            <div class="flex flex-row justify-center items-center w-[144px]">
                 <div>
                     <a href="{% url 'home:index' %}">
                         <img src="{% static 'img/logo.png' %}" alt="logo" class="mx-4 md:mx-0" width="50px" height="50px"/>
                     </a>
                 </div>
             </div>
-            <div class="hidden flex-row justify-center items-center space-x-4 text-xl md:flex md:text-2xl">
+            <div class="hidden flex-row justify-center items-center space-x-4 mx-auto text-xl md:flex md:text-2xl">
                 <a href="{% url 'home:index' %}" class="hover:text-indigo-300">Home</a>
                 <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
                 <a href="{% url 'professors:all_professors' %}"
