changes instagram link for github link

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,12 +5,12 @@
         <a href="{% url 'reviews:suggestions' %}?next={{ request.path }}" class="text-indigo-600 hover:text-indigo-300 mx-2">Sugerencias</a>   
         <a href="#" class="hover:text-indigo-300 mx-2">Contact</a>
     </div>
-    <div class="flex justify-center items-start">
+    <div class="flex justify-evenly items-start w-[320px]">
         <a href="https://twitter.com/jasiel_rt95" class="mx-2">
             <img src="{% static 'img/twitter.png' %}" alt="twitter" class="w-9 h-9" width="36px" height="36px"/>   
         </a>
-        <a href="https://www.instagram.com/jasiel_rt95/" class="mx-2">
-            <img src="{% static 'img/instagram.png' %}" alt="instagram" class="w-9 h-9" width="36px" height="36px"/>
+        <a href="https://github.com/jasielrt95/Proferank" class="mx-2">
+            <img src="{% static 'img/github.png' %}" alt="instagram" class="w-9 h-9" width="36px" height="36px"/>
         </a>
         <a href="https://www.linkedin.com/in/jasielrivera/" class="mx-2">
             <img src="{% static 'img/linkedin.png' %}" alt="linkedin" class="w-9 h-9" width="36px" height="36px"/>
